--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=https://tienda-d.herokuapp.com/
 
-DB_CONNECTION=pgsql
-DB_HOST=ec2-50-19-223-15.compute-1.amazonaws.com
-DB_PORT=5432
-DB_DATABASE=dbtk0cepls1d0v
-DB_USERNAME=tzvaoevgaluhyc
-DB_PASSWORD=aclS85LyRN9668TI6qiaKtt4MN
+DB_CONNECTION=mysql
+DB_HOST=sql9.freemysqlhosting.net
+DB_PORT=3306
+DB_DATABASE=sql9190688
+DB_USERNAME=sql9190688
+DB_PASSWORD=F4JHiRIyug
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
