--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=tienda-d-lts
-DB_USERNAME=root
-DB_PASSWORD='PTF123'
+DB_HOST=ec2-50-19-223-15.compute-1.amazonaws.com
+DB_PORT=5432
+DB_DATABASE=dbtk0cepls1d0v
+DB_USERNAME=tzvaoevgaluhyc
+DB_PASSWORD='aclS85LyRN9668TI6qiaKtt4MN'
 
 
 BROADCAST_DRIVER=log
