--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=ec2-50-19-223-15.compute-1.amazonaws.com
 DB_PORT=5432
 DB_DATABASE=dbtk0cepls1d0v
