--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=tienda-d
-APP_ENV=local
+APP_ENV=Heroku
 APP_KEY=base64:kImL62QryRvWCzDWTV/bFNMj6JX6URP6t4rnv3wmpbQ=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
