--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 APP_NAME=tienda-d
-APP_ENV=Heroku
+APP_ENV=local
 APP_KEY=base64:kImL62QryRvWCzDWTV/bFNMj6JX6URP6t4rnv3wmpbQ=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=pgsql
-DB_HOST=ec2-50-19-223-15.compute-1.amazonaws.com
-DB_PORT=5432
-DB_DATABASE=dbtk0cepls1d0v
-DB_USERNAME=tzvaoevgaluhyc
-DB_PASSWORD='aclS85LyRN9668TI6qiaKtt4MN'
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=tienda-d
+DB_USERNAME=root
+DB_PASSWORD='root'
 
 
 BROADCAST_DRIVER=log
@@ -32,3 +32,5 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_KEY=
 
+ALGOLIA_APP_ID=W6J4BE2HNQ
+ALGOLIA_SECRET=b7aef617b42ca566aad9ab3aa532cd9b
