--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,14 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
-        "laravelcollective/html": "^5.3",
+        "php": ">=7.2",
+        "laravel/framework": "5.4.*",
+        "laravelcollective/html": "^5.4.0",
         "intervention/image": "^2.3",
-        "laracasts/flash": "2.*",
-        "gloudemans/shoppingcart": "2.2.*",
-        "ext-gd": "*"
+        "gloudemans/shoppingcart": "2.5.*",
+        "ext-gd": "*",
+        "laravel/scout": "^4.0",
+        "algolia/algoliasearch-client-php": "^1.25"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
