--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,6 @@
-APP_ENV=testing
-APP_KEY=base64:kImL62QryRvWCzDWTV/bFNMj6JX6URP6t4rnv3wmpbQ=
+APP_NAME=tienda-d
+APP_ENV=local
+APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -7,9 +8,10 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=tienda-d-lts
+DB_DATABASE=tienda-d
 DB_USERNAME=root
-DB_PASSWORD='PTF123'
+DB_PASSWORD='root'
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,4 +31,6 @@ MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_KEY=
-PUSHER_SECRET=
+
+ALGOLIA_APP_ID=W6J4BE2HNQ
+ALGOLIA_SECRET=b7aef617b42ca566aad9ab3aa532cd9b
