--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+dev-assets/
 /node_modules
+/public/hot
+/public/storage
+/storage/*.key
 /vendor
 /.idea
+/.vscode
+/.vagrant
 Homestead.json
 Homestead.yaml
-dev-assets/
+npm-debug.log
+yarn-error.log
+.env
+composer.lock
+package=lock.json
